more mobile friendly: dealt with design overlapping issue with About and ProjectList; dealt with disappearing slides bug

--- a/app/components/About/about.module.css
+++ b/app/components/About/about.module.css
@@ -3,7 +3,6 @@
     padding: 3rem;
     flex-direction: column;
     gap: 1rem;
-    margin-top: 10vh;
 }
 
 .text {
